External project build
* Always builds release mode and build is done at cmake time
* Have to explicitly enable via ENABLE_SCIPP
* Puts into build directory, but does no futher packaging

More issues to iron out such as dealing with RPATHS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,11 @@ if(ENABLE_WORKBENCH)
   find_package(SIP REQUIRED)
   separate_arguments(PYQT5_SIP_FLAGS)
 endif()
+  
+option(ENABLE_SCIPP "Enable scipp for use with Mantid. Build from source in configuration step and install as python package." OFF)
+if(ENABLE_SCIPP)
+  include(scipp)
+endif()
 
 # Now add in all the components
 
